--- a/template.yml
+++ b/template.yml
@@ -3,7 +3,7 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: ND9991 C3 L4 
 Resources:
   EC2Instance:
-    Type: 'AWS::EC2::Instance'
+    Type: AWS::EC2::Instance
     Properties:
       SecurityGroups:
         - !Ref InstanceSecurityGroup
@@ -11,14 +11,14 @@ Resources:
       KeyName: key
       # Change this, as applicable to you
       # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
-      ImageId: 'ami-0557a15b87f6559cf' 
+      ImageId: ami-0557a15b87f6559cf
       InstanceType: t2.micro
   InstanceSecurityGroup:
-    Type: 'AWS::EC2::SecurityGroup'
+    Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Enable SSH access via port 22
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: '22'
-          ToPort: '22'
+          FromPort: 22
+          ToPort: 22
           CidrIp: 0.0.0.0/0 
