--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,24 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
-
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "64:12:1f:0a:0e:7f:4f:f5:0d:f6:23:15:8b:0b:86:67"
+      - run:
+          name: install ansible
+          command: apk add --update ansible
+      - run:
+          name: run the playbook
+          command: ansible-playbook -i inventory main.yml
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      - create-infrastructure
+      # - create-infrastructure
+      - configure-infrastructure
