--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,14 +34,15 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints:
-            - "64:12:1f:0a:0e:7f:4f:f5:0d:f6:23:15:8b:0b:86:67"
+          fingerprints: ["64:12:1f:0a:0e:7f:4f:f5:0d:f6:23:15:8b:0b:86:67"]
       - run:
           name: install ansible
-          command: apk add --update ansible
+          command: |
+            apk add --update ansible
       - run:
           name: run the playbook
-          command: ansible-playbook -i inventory main.yml
+          command: |
+            ansible-playbook -i inventory main.yml
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
