--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,16 +47,17 @@ jobs:
     docker:
       - image: alpine:latest
     steps:
-      - name: test
-      - command: |
-          URL="https://blog.udacity.com/"
-          # Test if website exists
-          if curl -s --head ${URL} 
-          then
-            return 0
-          else
-            return 1
-          fi
+      - run:
+          name: test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
