--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,16 @@
 version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+
+commands:
+  destroy-environment:
+    steps:
+      - run:
+          name: destroy env
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+
 jobs:
   # say-hello:
   #   # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
@@ -51,7 +61,7 @@ jobs:
       - run:
           name: test
           command: |
-            URL="https://blog.udacity.com/"
+            URL="https://blog.udacityyyy.com/"
             # Test if website exists
             if curl -s --head ${URL} 
             then
@@ -59,12 +69,13 @@ jobs:
             else
               return 1
             fi
+      - destroy-environment
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      # - create-infrastructure
+      - create-infrastructure
       # - configure-infrastructure
       - smoke-test
