adding aws cli to alpine and remove the creation job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
       - image: alpine:latest
     steps:
       - run: apk add --update curl
+      - run: apk add --update aws-cli
       - run:
           name: test
           command: |
@@ -76,8 +77,8 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      - create-infrastructure
+      # - create-infrastructure
       # - configure-infrastructure
-      - smoke-test:
-          requires:
-            - create-infrastructure
+      - smoke-test
+          # requires:
+          #   - create-infrastructure
