re use creation job to comlete the flow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,8 +77,8 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      # - create-infrastructure
+      - create-infrastructure
       # - configure-infrastructure
-      - smoke-test
-          # requires:
-          #   - create-infrastructure
+      - smoke-test:
+          requires:
+            - create-infrastructure
